# radar-publico

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PRODUCT.md  README.md  docker-compose.local-prod.yml  docker-compose.prod.yml  docker-compose.yml  schema.sql
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-prod.txt  requirements-scraper.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260511_0456_c3e10ad43fd7_documentos_bases_y_documento_chunks.py  20260514_0404_sprint4_radar_y_pipeline.py  20260517_2300_plan0_ia_analisis_y_borradores.py  20260603_1000_pipeline_checklist.py  20260603_1030_state_alerts.py  20260603_1100_missing_tables.py  20260603_1200_plan_anual_unique.py  20260604_0900_make_embedding_nullable.py  20260604_1000_hnsw_optimized_params.py  20260606_1000_drop_search_vector_trigger.py  20260607_0900_composite_indexes_licitaciones.py  20260607_0930_unspsc_covering_index.py  20260607_1000_unspsc_prefijos_gin.py
backend/app/: __init__.py  celery_app.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/admin/: __init__.py  cuentas.py  dashboard.py
backend/app/api/v1/: __init__.py  analisis.py  auth.py  catalogos.py  chat.py  dashboard.py  directorios.py  empresa.py  futuro.py  health.py  inteligencia.py  intereses.py  licitaciones.py  notificaciones.py  pipeline.py  pipeline_checklist.py  preferencias.py  radares.py  sync.py
backend/app/core/: __init__.py  cache.py  encryption.py  rate_limit.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  adjudicacion.py  analisis_ia.py  api_log.py  catalogos.py  conversacion.py  documento_base.py  empresa.py  enums.py  eventos_auditoria.py  interes.py  licitacion.py  llm_usage_log.py  notificacion.py  ordenes_compra.py  organismo.py  password_reset.py  pipeline.py  plan_anual.py  preferencias.py  proveedor.py  radar.py  refresh_token.py  ticket.py  usuario.py
backend/app/schemas/: __init__.py  admin.py  admin_dashboard.py  auth.py  chat.py  checklist.py  chilecompra.py  dashboard.py  empresa.py  futuro.py  inteligencia.py  intereses.py  licitaciones.py  notificacion.py  pipeline.py  preferencias.py  radar.py
backend/app/scripts/: __init__.py  backfill.py  backfill_adjudicaciones.py  backfill_plan_anual.py  backfill_unspsc_prefijos.py  create_user.py  load_ticket_demo.py  seed.py  test_chilecompra.py
backend/app/scripts/seeds/: comunas_chile.csv  regiones_chile.csv  unspsc_v14_es.csv
backend/app/services/: docx_export.py
backend/app/services/admin/: exceptions.py  service.py
backend/app/services/auth/: audit.py  exceptions.py  service.py
backend/app/services/chilecompra/: __init__.py  client.py  enums.py  exceptions.py  utils.py
backend/app/services/email/: sender.py
backend/app/services/email/templates/: password_changed.py  password_reset.py  welcome.py
backend/app/services/llm/: client.py  exceptions.py  prompts.py  usage_log.py  voyage.py
backend/app/services/notifications/: state_change.py
backend/app/services/pdf/: chunker.py  exceptions.py  parser.py
backend/app/services/pipeline/: checklist.py
backend/app/services/scoring/: relevance.py
backend/app/services/scraping/: __init__.py  exceptions.py  mercado_publico.py  playwright_client.py
backend/app/services/search/: vector.py
backend/app/services/storage/: __init__.py  exceptions.py  r2.py
backend/app/services/whatsapp/: sender.py
backend/app/tasks/: analizar_bases.py  detecta_renovaciones.py  ejecuta_radares.py  embed_chunks.py  embed_licitacion.py  generar_borrador.py  generar_recordatorios.py  marcar_procesada.py  notifications.py  procesar_notificaciones.py  procesar_pdf.py  recalcula_scores.py  scrape_bases.py  sync_chilecompra.py  sync_detalle.py  sync_plan_anual.py  validate_ticket.py
backend/app/tests/: conftest.py
backend/app/tests/e2e/: conftest.py  test_auth_admin.py  test_futuro_radares_onboarding.py  test_licitaciones_chat.py  test_pipeline_notif_dashboard.py
backend/app/tests/fixtures/portal/: sample_page.html
backend/app/tests/integration/: test_auth_endpoints.py  test_checklist_api.py  test_state_alerts.py  test_sync_listado.py
backend/app/tests/unit/: test_checklist_service.py  test_state_change_service.py
docs/: AuditReport.md  (+10 more)
(+164 files in other folders)
